# pad-salience-annotations

./: .gitignore  README.md  config.yaml  generate_eyetracking_layout.py  pyproject.toml  run_prototype.sh  server.py  zazzy-tumbling-island.md
app/: __init__.py  database.py  main.py
app/models/: __init__.py  annotations.py  auth.py  experiments.py  samples.py  studies.py
app/routers/: __init__.py  admin.py  auth.py  specialist.py
app/services/: __init__.py  auth.py
data/: annotations.jsonl
data/audio/: session_1768234545454.webm
docs/: apriltag-identification-system.md  experiment-system.md  eye-tracking-integration.md  feedback-questionnaire.md  plan-rename-experiment-to-study.md  prototype-specifications.md  requirements.md  study-system.md
frontend/templates/: base.html  login.html
frontend/templates/admin/: dashboard.html  experiment_detail.html  experiment_new.html  experiment_progress.html  session_replay.html  studies.html  study_detail.html  study_new.html  study_progress.html  users.html
frontend/templates/specialist/: annotate.html  dashboard.html
migrations/: 001_initial_schema.sql  002_sample_tags.sql  003_specialist_profile.sql  004_assignment_expertise_snapshot.sql  005_rename_experiment_to_study.sql  006_multi_role_users.sql  007_super_admin_role.sql
prototype/: index-fullscreen.html  index.html
sample_images/: manifest.json
scripts/: allocate_tags.py  create_admin.py  generate_apriltags.py
